tests/shouldFail/j015.c
int f(void);

int f(int);

int f(void) {
	return 0;
}

int main(void) {
	return 0;
}
